# vocabulary_coach_bot

./: .gitignore  README.md  bot_tg.py
docs/: bot_vocabulary_coach.service  deploy_table.md
google_table_code/: .clasp.json  HereDEPLOYenv.md
google_table_code/dev_env_inside/: .clasp.json
google_table_code/dev_env_inside/src/: App.js  appsscript.json  colNames.js  colNamesAndNet.js  iNet.js  process_questions.js  process_resilts.js  process_word.js  utils.js  Код.js
scripts/: migrate_aiogram_bucket_keys.py
telegram/: bot_telegram.py  middleware.py  texts.py
telegram/routine/: bot_startup_action.py  broadcasting.py
telegram/utils/: aiogram_redis_ext.py  database_update.py  google_ask.py  message_animated_progress.py  spreadsheet_connector.py  texts_enum.py
telegram/widgets/: settings.py
vocabulary_coach_bot/: Dockerfile  docker-compose.yml  global_settings.ini.example  pyproject.toml  requirements.txt
vocabulary_coach_bot/telegram/: bot_telegram.py  filters.py  handlres_main.py  middleware.py  texts.py
vocabulary_coach_bot/telegram/routine/: bot_startup_action.py  broadcasting.py
vocabulary_coach_bot/telegram/utils/: aiogram_redis_ext.py  config_types.py  constants.py  database_update.py  google_ask.py  message_animated_progress.py  spreadsheet_connector.py  text_colors.py  updatesworker.py
vocabulary_coach_bot/telegram/widgets/: admin.py  settings.py  start_dialogue.py
vocabulary_coach_bot/telegram/widgets/trainigs/: trainings.py  trainings_answers.py  trainings_chache.py  trainings_common.py  trainings_generate.py  trainings_reminder.py
(+5 files in other folders)
