[project]
name = "vocabulary-coach-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "aioredis>=2.0.1",
    "apscheduler>=3.11.1",
    "rapidfuzz>=3.14.3",
    "redis>=7.0.1",
]
